isolate gh specific styles, fix faq icons on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,11 +5,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.page {
-  position: relative;
-  top: 50px;
-}
-
 // https://stackoverflow.com/questions/38136077/how-to-morph-a-plus-sign-to-a-minus-sign-using-css-transition
 .qa-toggle {
   color: black;
@@ -29,17 +24,17 @@
 }
 
 .qa-toggle span:first-of-type {
-  top: 25%;
-  bottom: 25%;
-  width: 10%;
-  left: 45%;
+  top: 6px;
+  bottom: 6px;
+  width: 3px;
+  left: 11px;
 }
 
 .qa-toggle span:last-of-type {
-  left: 25%;
-  right: 25%;
-  height: 10%;
-  top: 45%;
+  left: 6px;
+  right: 6px;
+  height: 3px;
+  top: 11px;
 }
 
 #plusminus {
@@ -445,8 +440,6 @@
   margin: auto;
   margin-top: 45px;
   margin-bottom: -35px;
-  position: relative;
-  top: -20px;
   @media only screen and (min-width: 500px) {
     padding-left: 50px;
   }
@@ -503,7 +496,6 @@ p {
 .footer {
   width: 100%;
   background: #f5f8fa;
-  margin-top: 100px;
   margin-bottom: 35px;
 }
 
@@ -1047,3 +1039,18 @@ ul, menu, dir {
   -webkit-transform: translateY(25%) rotateX(-35deg);
   transform: translateY(25%) rotateX(-35deg);
 }
+
+// Special GH Pages styles, disable for development
+// .page {
+//   position: relative;
+//   top: 50px;
+// }
+
+// .footer {
+//   margin-top: 100px;
+// }
+
+// .legal-inner {
+//   position: relative;
+//   top: -20px;
+// }
